Fix menu icon alignment

--- a/astrobin/static/css/astrobin.less
+++ b/astrobin/static/css/astrobin.less
@@ -1124,6 +1124,13 @@ body.full {
     background-color: #CC4B2E;
 }
 
+li [class^="icon-"], .nav li [class^="icon-"], 
+li [class*=" icon-"], .nav li [class*=" icon-"] {
+    display: inline-block;
+    width: 1.25em;
+    text-align: center;
+}
+
 // Won't be needed anymore in bootstrap 2.1.0
 // https://github.com/twitter/bootstrap/issues/2764
 .nav li.disabled {
